# PyBrowserAutomation

./: .env  .gitignore  .readthedocs.yaml  62f410b477de42cabdb4793e43940207_network.har  CONTRIBUTING.md  Makefile  README.md  afdb63db282849d491ba73d931ad888a_network.har  gasfa.py  madsa  pyproject.toml  setup.py  test.py
assets/: scraping_email_addresses.webm
automation_eval/: README.md
automation_eval/data_extraction_tasks/: README.md
automation_eval/data_extraction_tasks/task1/: 2b0c521cb3c24c1daa910abc69739423_network.har  output.txt  task1.md
automation_eval/data_extraction_tasks/task2/: c3d3cfdd4d0e421ebe81dc20b4dfe0f5_network.har  task2.md
automation_eval/data_extraction_tasks/task3/: task3.md
automation_eval/multi_step_tasks/: README.md
automation_eval/single_step_tasks/: README.md
automation_eval/threaded/: README.md  script.py
docs/: cli.rst  cli_core.rst  conf.py  extraction.rst  index.rst  modules.rst  pyba.cli.cli_core.rst  pyba.cli.rst  pyba.core.agent.rst  pyba.core.lib.mode.rst  pyba.core.lib.rst  pyba.core.rst  pyba.core.scripts.extractions.rst  pyba.core.scripts.login.rst  pyba.core.scripts.rst  pyba.database.rst  pyba.rst  pyba.utils.prompts.rst  pyba.utils.rst  requirements.txt  usage.rst
examples/socmint/: script.py
pyba/: config.yaml
pyba/core/: main.py  tracing.py
pyba/database/: __init__.py  database.py  db_funcs.py  models.py
pyba/utils/: common.py  structure.py
tests/playwright-dom-extraction/: extract_all_text.py  extract_clickables.py  extract_input_fields.py  fillable_boxes.py  output.html  script.py
(+50 files in other folders)
