[project]
name = "pyba"
version = "0.0.1"
description = "Automate online browsing using python and AI"
authors = [
    {name = "pUrGe12",email = "achintya.jai@owasp.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright (>=1.55.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
